--- a/public/signup.html
+++ b/public/signup.html
@@ -17,6 +17,6 @@
     <p>Already have an account? <a href="login.html">Login</a></p>
   </div>
 
-  <script src="signup.js"></script> <!-- VERY IMPORTANT -->
+  <script src="sign.js"></script> <!-- VERY IMPORTANT -->
 </body>
 </html>
