--- a/public/home.html
+++ b/public/home.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My To-Do List</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todo App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Todo List</h1>
+        
+        <form id="taskForm">
+            <input type="text" id="title" placeholder="Task title" required>
+            <textarea id="description" placeholder="Task description"></textarea>
+            <input type="date" id="dueDate">
+            <button type="submit">Add Task</button>
+        </form>
 
-  <div class="todo-container">
-    <h1 class="animated-text">My Tasks</h1>
+        <div id="loading">Loading tasks...</div>
+        <div id="error" class="hidden"></div>
+        
+        <div id="taskList"></div>
+    </div>
 
-    <form id="taskForm">
-      <input type="text" id="taskInput" placeholder="What needs to be done?" required>
-      <button type="submit">Add Task</button>
-    </form>
-
-    <ul id="taskList"></ul>
-  </div>
-
-  <script src="scripts.js"></script>
+    <script src="task.js"></script>
 </body>
 </html>
